--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
-.test {
-    color: red;
+.issues-wrapper {
+    display: flex;
+    
+    .issue-item:not(:last-child) {
+        margin-bottom: 10px;
+        .title{
+            font-size: 20px;
+            font-weight: bold;
+        }
+    }
 }
