--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -5,17 +5,29 @@
 * {
     box-sizing: border-box;
 }
-
+ul,ol {
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .issues-wrapper {
     display: flex;
     flex-direction: column;
+    border: 1px solid #e1e4e8;
+    border-radius: 3px 3px 0 0;
     .issue-item {
-        &:not(:last-child) {
-            margin-bottom: 10px;
-        }
-        padding:10px 4px;
-        border-top: 1px solid #e1e4e8;
+        display: flex;
+        flex-direction: column;
+        padding: 10px 4px;
         border-bottom: 1px solid #e1e4e8;
+        &:hover{
+            background-color: #f6f8fa;
+        }
+        &.issue-item-filter{
+            flex-direction: row !important;
+            background-color: #f6f8fa;
+            justify-content: space-between;
+        }
         .link {
             text-decoration: none !important;
             color: @gray-dark;
@@ -23,7 +35,7 @@
                 color: @blue;
             }
         }
-        .flex-row-container(){
+        .flex-row-container() {
             display: flex;
             align-items: center;
             justify-content: flex-start;
@@ -31,8 +43,9 @@
         }
         .header {
             .flex-row-container();
-            a,span{
-                &:first-child{
+            a,
+            span {
+                &:first-child {
                     margin-right: 6px !important;
                 }
                 margin-right:2px;
@@ -69,11 +82,7 @@
                 width: 30px;
                 border-radius: 50px;
             }
-            div,
-            img,
-            label,
-            span,
-            a {
+            div,img,label,span,a {
                 margin-right: 6px;
             }
             .user-name {
